--- a/项目技术笔记.md
+++ b/项目技术笔记.md
@@ -1,4 +1,4 @@
-#本项目所有api
+# 本项目所有api
 https://cnodejs.org/api
 
 # config-overrides
@@ -9,15 +9,27 @@ https://cnodejs.org/api
 看谷粒后台22课 https://www.bilibili.com/video/BV1i4411N7Qc?p=22
 在package.json配置proxy,开发环境中已经有代理服务器了，配置proxy就可以开启代理服务器并设定目标地址
 
-#hooks版的路由参数传递语法
+## hooks版的路由参数传递语法
 思想原理与component一直，写法上略有改变。
 传参url的三种写法保持了原有风格不变。参考:/router/index.js
 传输接收文的写法改变参照下列代码↓
 1.params传值参考：/views/topic/index.js
 2.search传值参考：/views/index/index.js
 
-#hooks版的编程式路由
+## hooks版的编程式路由
 使用useHistory。
 参考:/view/topic/index.js
 
+## redux会被hooks取代么？
+截止至2021年，React v17.0.2，答案还是否定的。因为↓
+●理论上
+useContent可以代替redux中的store，useReducer可以代替redux中的reducer 、action和dispatch
+二者结合就可以完成redux的工作。
+但是Hooks仍然无法替代Redux的作用，特别是在状态共享方面。
+`useReducer`虽然很好地分离了逻辑和UI，但是无法像redux一样进行跨组件的状态共享
+●实际上
+Hooks 提供了很多好用的api，甚至很多人认为Hooks的`useReducer`等Api已经可以取代Redux了。
+其实Hooks和Redux的使用场景并不冲突，而且可以互相借鉴，
+最近react-redux最新版本[7.1]也引入了Hooks风格的Api。
+使用useSelector、useDispatch等HooksApi替代connect，减少模板代码。
 
